--- a/config.cfg
+++ b/config.cfg
@@ -1,61 +1,30 @@
 
 // General information:
-
-sim_name   = "fig04_Naoz2013"; 
+sim_name   = "test"; 
 t_ini      = 0.0;                        # Years
 t_end      = 1.0e6;                      # Years
 h_output   = 1.0e3;                      # Years
-q_orb      = 1;
-q_tid      = 0;
-q_GR       = 0;
-rcu        = 1;
-rse        = 0;
 uM         = 1.989e30;
 uL         = 149.6e9;
 
-// Initial mutual inclination
-
-I_tot    = 70.0;
-
 
 // Information of each body
-
 bodies =
 {
-  inner_A = ( { name  = "body_A";
-              mass    = 1.4;       # Solar masses
-              radius  = 1.0;       # Solar radius
-              k       = 0.014;      # dimensionless
-	      tv      = 50.0;      # Years
-	      gyr_rad = 0.08;       # dimensionless
-	      a       = 5.0;       # AU
-	      e       = 0.5;       # dimensionless
-	      W       = 0.0;       # deg
-	      w       = 120.0;       # deg
-	      P_rot_A = 20.0;      # Days
-	      alpha_A = 0.0;       # deg
-	      beta_A  = 0.0;},);   # deg 
+  planet = ( { name  = "planet";
+              mass    = 7.1;        # Earth masses
+              radius  = 1.7;        # Earth radius
+	      BmAC    = 5.0e-5      # Dimensionless
+	      gyr_rad = 0.4         # Dimensionless
+	      a       = 0.218;       # AU
+	      e       = 0.27;       # dimensionless
+	      P_rot    = 20.0;      # Days
+	      tau_M   = 50.0       # Years 
+	      mu      = 8.0e10     # kg/(m*s^2)
+	      alpha   = 0.2;},);       # Dimensionless
 
-  inner_B = ( { name   = "body_B";
-               mass    = 0.3;
-               radius  = 0.10059136690647481;
-               k       = 0.255;
-	       tv      = 0.001;
-	       gyr_rad = 0.25;
-	       P_rot_B = 0.4166666666666667;
-	       alpha_B = 0.0;
-	       beta_B  = 0.0;},);
-
-   outer = ( { name    = "body_C";
-               mass    = 0.01;
-               radius  = 0.0;
-               k       = 0.0;
-	       tv      = 0.0;
-	       gyr_rad = 0.0
-	       a       = 50.0;
-	       e       = 0.0;
-	       W       = 180.0;
-	       w       = 0.0;});
+  star = ( {  name   = "star";
+              mass    = 0.31;},);       # Solar mass
 };
 
 
