--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 
 // General information:
-sim_name   = "test"; 
+sim_name   = "mercury_wf"; 
 t_ini      = 0.0;                        # Years
 t_end      = 1.0e6;                      # Years
 h_output   = 1.0e3;                      # Years
@@ -12,19 +12,19 @@ uL         = 149.6e9;
 bodies =
 {
   planet = ( { name  = "planet";
-              mass    = 7.1;        # Earth masses
-              radius  = 1.7;        # Earth radius
-	      BmAC    = 5.0e-5      # Dimensionless
+              mass    = 0.055257870060281315;        # Earth masses
+              radius  = 0.3829854026055564;        # Earth radius
+	      BmAC    = 1.2e-4      # Dimensionless
 	      gyr_rad = 0.4         # Dimensionless
-	      a       = 0.218;       # AU
-	      e       = 0.27;       # dimensionless
+	      a       = 0.3870320855614973;       # AU
+	      e       = 0.20563;       # dimensionless
 	      P_rot   = 20.0;      # Days
-	      tau_M   = 50.0       # Years 
+	      tau_M   = 500.0       # Years 
 	      mu      = 8.0e10     # kg/(m*s^2)
 	      alpha   = 0.2;},);       # Dimensionless
 
   star = ( {  name   = "star";
-              mass    = 0.31;},);       # Solar mass
+              mass    = 1.00;},);       # Solar mass
 };
 
 
