--- a/config.cfg
+++ b/config.cfg
@@ -1,30 +1,28 @@
-
 // General information:
-sim_name   = "mercury_wf"; 
+sim_name   = "GJ581d"; 
 t_ini      = 0.0;                        # Years
 t_end      = 1.0e6;                      # Years
 h_output   = 1.0e3;                      # Years
 uM         = 1.989e30;
 uL         = 149.6e9;
 
-
 // Information of each body
 bodies =
 {
   planet = ( { name  = "planet";
-              mass    = 0.055257870060281315;        # Earth masses
-              radius  = 0.3829854026055564;        # Earth radius
-	      BmAC    = 1.2e-4      # Dimensionless
+              mass    = 7.1;        # Earth masses
+              radius  = 1.7;        # Earth radius
+	      BmAC    = 5.0e-5      # Dimensionless
 	      gyr_rad = 0.4         # Dimensionless
-	      a       = 0.3870320855614973;       # AU
-	      e       = 0.20563;       # dimensionless
-	      P_rot   = 20.0;      # Days
-	      tau_M   = 500.0       # Years 
-	      mu      = 8.0e10     # kg/(m*s^2)
-	      alpha   = 0.2;},);       # Dimensionless
+	      a       = 0.218;      # AU
+	      e       = 0.27;       # dimensionless
+	      P_rot   = 20.0;       # Days
+	      tau_M   = 50.0        # Years 
+	      mu      = 8.0e10      # kg/(m*s^2)
+	      alpha   = 0.2;},);    # Dimensionless
 
   star = ( {  name   = "star";
-              mass    = 1.00;},);       # Solar mass
+              mass    = 0.31;},);   # Solar mass
 };
 
 
