--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,8 @@
 // General information:
 sim_name   = "GJ581d"; 
 t_ini      = 0.0;                        # Years
-t_end      = 1.0e6;                      # Years
-h_output   = 1.0e3;                      # Years
+t_end      = 1.0e3;                      # Years
+h_output   = 1.0e1;                      # Years
 uM         = 1.989e30;
 uL         = 149.6e9;
 
@@ -26,5 +26,7 @@ bodies =
 };
 
 
-
+// Initial conditions
+theta_ini = 0.0;     # Degrees
+res_ini   = 1.8;    # Initial resonance [Dimensionless]
 
